--- a/sensor_serial/src/main/AndroidManifest.xml
+++ b/sensor_serial/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
     <uses-feature android:name="android.hardware.camera2.autofocus" />
     <uses-feature android:name="android.hardware.camera2.front.autofocus" />
 
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.Light">
+
         <activity android:name="org.ros.android.MasterChooser" />
         <!-- To manage to execute nodes like the node handler -->
         <service android:name="org.ros.android.NodeMainExecutorService">
@@ -51,6 +53,7 @@
             android:label="@string/title_activity_app_start"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
+        <activity android:name=".VisualizationActivity"></activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCZ5TH2mfl26LqDq6kkVbo85gLPZ9fmaik" />
